# aibo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
python/: .gitignore  README.md  alembic.ini  pyproject.toml
python/aibo/: conftest.py
python/aibo/cli/: common.py  format.py  start.py  test.py
python/aibo/common/: classproperty.py  constants.py  openai.py  result.py  time.py
python/aibo/core/: chat.py  openai.py
python/aibo/core/tests/: test_chat.py
python/aibo/db/: __init__.py  client.py
python/aibo/db/documents/: __init__.py  base_document.py  conversation_document.py  git_file_document.py  git_repo_document.py  message_content.py  message_document.py  message_edge_document.py  message_source.py
python/aibo/db/documents/tests/: test_documents.py
python/aibo/server/: main.py
python/aibo/server/routes/: api_models.py  chat_routes.py  healthcheck_routes.py  types.py  websocket_route.py  websocket_routes.py
python/aibo/testing/: factory.py
python/aibo/testing/factories/: base_factory.py  chat_factory.py  documents_factory.py
python/src/aibo/: conftest.py
python/src/aibo/__db_migrations/: env.py  script.py.mako
python/src/aibo/__db_migrations/versions/: 112ef53baf2c_add_images_table.py  1bce28c8dbd2_add_conversation_cwd.py  2c9b4d6e1f2a_add_conversation_codex_thread_id.py  5a31b5a3f565_create_chat_tables.py  8c2aa3d4c59a_add_conversation_foreign_keys.py  f43a2b565df6_add_fts5.py
python/src/aibo/cli/: common.py  format.py  migrate.py  start.py  test.py
python/src/aibo/common/: constants.py  openai.py  shell.py  shorthands.py  types.py  utils.py  vector_db.py
python/src/aibo/common/chat/: __init__.py  message_content.py  message_role.py  message_source.py
python/src/aibo/common/tests/: test_vector_db.py
python/src/aibo/core/: chat.py  codex_exec.py  openai.py  package.py
python/src/aibo/core/tests/: test_package.py
python/src/aibo/db/: client.py
python/src/aibo/db/models/: __init__.py  base_db_model.py  conversation_model.py  custom_types.py  image_model.py  message_model.py
python/src/aibo/db/models/tests/: test_models.py
python/src/aibo/server/: main.py
python/src/aibo/server/routes/: api_models.py  chat_routes.py  image_routes.py  websocket_route.py  websocket_routes.py
python/src/aibo/testing/: factory.py
python/src/aibo/testing/factories/: base_factory.py  chat_factory.py  model_factory.py
python/src/aibo/tools/lang/: python.py
python/src/aibo/tools/lang/python/: __init__.py  ast_types.py  finder.py  source_finder.py
python/src/aibo/tools/lsp/: lsp_server.py  lsp_service.py  pipe_comms.py  utils.py
python/src/aibo/tools/lsp/types/: __init__.py  base_lsp_types.py  client_capabilities.py  common_types.py  constants.py  location_types.py  lsp_request.py  lsp_response.py  (+2 more)
(+14 files in other folders)
