[project]
name = "aibo"
version = "0.1.0"
authors = [
  { name="dmed", email="dmed256@gmail.com" },
]
description = "AI partner"
requires-python = ">=3.11"
dependencies = [
  "aiocache==0.12.*",
  "black==23.*",
  "fastapi==0.*",
  "fire==0.5.*",
  "isort==5.*",
  "openai==0.*",
  "pydantic==2.2.*",
  "pymongo==4.*",
  "tenacity==8.*",
  "termcolor==2.*",
  "uvicorn[standard]==0.22.*",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
enable_incomplete_feature = ["Unpack"]
