[project]
name = "aibo-server"
version = "0.1.7"
authors = [
  { name="David Medina", email="dmed256@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["emacs", "aibo"]
description = "aibo: AI partner"
requires-python = ">=3.11"
dependencies = [
  "aiocache==0.12.*",
  "aiosqlite==0.19.*",
  "alembic==1.11.*",
  "async-lru==2.*,",
  "cachetools==5.3.*",
  "fastapi==0.*",
  "fire==0.5.*",
  "greenlet==2.0.*",
  "numpy==1.24.*",
  "openai==1.2.*",
  "Pillow==10.1.*",
  "pydantic==2.2.*",
  "sqlalchemy[asyncio]==2.0.21",
  "termcolor==2.3.0",
  "tiktoken==0.4.*",
  "types-cachetools==5.*",
  "uvicorn[standard]==0.22.*",
]

[project.optional-dependencies]
dev = [
  "black==23.3.0",
  "faker==19.3.*",
  "isort==5.*",
  "pytest==7.4.*",
  "pytest-asyncio==0.21.*",
  "pytest-xdist==3.3.*",
]

[project.urls]
Homepage = "https://github.com/dmed256/aibo"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy",
  "numpy.typing.mypy_plugin",
  "sqlalchemy.ext.mypy.plugin",
]
warn_redundant_casts = true
allow_redefinition = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
enable_incomplete_feature = ["Unpack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"
